--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  appinio_swiper: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,7 +61,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/64x64.png
+    - assets/600x600.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
