--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.9.0
+  google_sign_in: ^6.0.2
+  firebase_ui_auth: ^1.2.0
+  firebase_ui_oauth_google: ^1.1.0
+  firebase_auth: ^4.4.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
