--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_ui_oauth_google: ^1.1.0
   firebase_auth: ^4.4.0
   provider: ^6.0.5
+  image_network: ^2.5.1
 
 dev_dependencies:
   flutter_test:
