--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/64x64.png
+    - assets/512x512.png
     - assets/600x600.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
