--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   firebase_auth: ^4.4.0
   provider: ^6.0.5
   image_network: ^2.5.1
-  provider: ^6.0.5
   flip_card: ^0.7.0
+  flutter_image: ^4.1.5
 
 dev_dependencies:
   flutter_test:
