--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/64x64.png
     - assets/512x512.png
     - assets/600x600.png
+    - assets/carlos.jpeg
+    - assets/carla.avif
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
