--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ flutter:
     - assets/512x512.png
     - assets/600x600.png
     - assets/carlos.jpeg
-    - assets/carla.avif
+    - assets/carlos.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
