--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,9 @@ flutter:
     - assets/600x600.png
     - assets/carlos.jpeg
     - assets/carlos.jpg
+    - assets/IvoP.jpg
+    - assets/laura.jpg
+    - assets/zylber.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
